Fixing up some things.
Changed a bit of the styling. Put the form component on the item being edited instead of just returning the form component and not showing the rest of the list. Changed the placeholder text for the form when it's being rendered for editing an item, it now says 'Edit text "--text of item being edited here--"'. Also changed the text for the button on the form component to say 'submit edit' when being rendered for editing.

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,11 +7,16 @@
     width: 100%;
     margin: 0 0 40px 0;
     height: 80px;
-    background-color: greenyellow;
+    background-color: blue;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     border-bottom: 2px black solid;
+}
+
+.form-cont {
+    margin-bottom: 30px;
 }
 
 h1 {
