--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-bottom: 30px;;
 }
 
 .form-input {
