--- a/src/components/ToDoList.css
+++ b/src/components/ToDoList.css
@@ -12,13 +12,15 @@
 .item {
     color: white;
     font-size: 30px;
+    width: 75%;
+    overflow: auto;
 }
 
 .buttons {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 5cm;
+    width: 25%;
 }
 
 .delete {
